log
Tue, Mar 25, 2025  8:05:21 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'L':
list.c:32:22: error: expected declaration specifiers before 'malloc'
     List *L (List *) malloc(sizeof(List));
                      ^~~~~~
list.c:33:5: error: expected declaration specifiers before 'L'
     L->current = 0;
     ^
list.c:34:5: error: expected declaration specifiers before 'L'
     L->size = 0;
     ^
list.c:35:6: error: expected declaration specifiers before 'return'
      return L;
      ^~~~~~
list.c:36:1: error: expected declaration specifiers before '}' token
 }
 ^
list.c:38:31: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void * firstList(List * list) {
                               ^
list.c:42:30: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void * nextList(List * list) {
                              ^
list.c:46:30: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void * lastList(List * list) {
                              ^
list.c:50:30: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void * prevList(List * list) {
                              ^
list.c:54:42: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void pushFront(List * list, void * data) {
                                          ^
list.c:57:41: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void pushBack(List * list, void * data) {
                                         ^
list.c:62:44: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void pushCurrent(List * list, void * data) {
                                            ^
list.c:65:30: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void * popFront(List * list) {
                              ^
list.c:70:29: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void * popBack(List * list) {
                             ^
list.c:75:32: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void * popCurrent(List * list) {
                                ^
list.c:79:29: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void cleanList(List * list) {
                             ^
test.c:9:1: error: parameter 'test_id' is initialized
 int test_id = -1;
 ^~~
test.c:12:14: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 int success(){
              ^
test.c:17:24: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void err_msg(char* msg){
                        ^
test.c:24:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void ok_msg(char* msg){
                       ^
test.c:30:25: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void info_msg(char* msg){
                         ^
test.c:35:75: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 int test_suite(int(*test)(), char* msg, int max_score, int id, int req_id){
                                                                           ^
test.c:51:26: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 List* initialize_exList(){
                          ^
test.c:73:29: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 List* initialize_emptyList(){
                             ^
test.c:83:18: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 int test_create(){
                  ^
test.c:98:22: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 int test_first_next(){
                      ^
test.c:171:21: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 int test_last_prev(){
                     ^
test.c:233:21: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 int test_pushfront(){
                     ^
test.c:298:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 int test_pushcurrent(){
                       ^
test.c:357:22: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 int test_popcurrent(){
                      ^
test.c:448:36: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 int main( int argc, char *argv[] ) {
                                    ^
In file included from test.c:5:0:
list.c:32:11: error: old-style parameter declarations in prototyped function definition
     List *L (List *) malloc(sizeof(List));
           ^
list.c:32:5: error: parameter name omitted
     List *L (List *) malloc(sizeof(List));
     ^~~~
test.c:468:1: error: expected '{' at end of input
 }
 ^
test.c:468:1: error: no return statement in function returning non-void [-Werror=return-type]
test.c: In function 'createList':
test.c:468:1: error: expected declaration or statement at end of input
test.c:468:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
In file included from test.c:5:0:
At top level:
list.c:32:11: error: 'L' defined but not used [-Werror=unused-function]
     List *L (List *) malloc(sizeof(List));
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
